# THS

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  PhaseB1_FreezeDoc_Fuel_BSFC_AsImplemented.md  PhaseB1b_Spec_DerivedFuelIntegrals_OptionA.md  README.md  README_PhaseA.md  README_PhaseB.md  README_PhaseB_B1_appended.md  README_PhaseB_B2.md  analyze_phaseA_suite.py  check_p_batt_act_lim_bat_discharge.py  exe.bat  pyproject.toml  pytest.ini  run_phaseA_suite.py  run_ths_zero.py  viz_ths_dashboards.py
data/cycles/: WLTC3b.csv
data/maps/: bsfc_m15a_fxe_assumed_v0.csv  bsfc_m15a_fxe_assumed_v1.csv
scripts/: analyze_phaseB_suite.py  count_eng_start.py  plot_bsfc_operating_points.py  plot_op_density_diff.py  render_colinear_report.py  render_colinear_viewer.py  run_phaseB.py  run_phaseB_suite.py  test.py  verify_phaseB.py  viz_ths_dashboards_phaseB.py
src/ths_zero/: audit.py  audit_B.py  battery_B.py  colinear_sim.py  derived_B.py  engine_gate_B.py  environment.py  run_io.py  schema_B.py  sim.py  sim_grid_A.py  sim_grid_B.py  step_A.py
tests/: __init__.py  conftest.py  test_audit_B.py  test_colinear_sim.py  test_flatten_B.py  test_fuel_B.py  test_losses_B.py  test_objective_B.py  test_render_colinear_viewer.py  test_run_phaseB_suite_triage.py  test_schema_B.py
tests/tests/: test_accounting_B.py  test_battery_B.py
ths_zero/: run_io.py  wltc.py
ths_zero_phaseB1_stubs/: plot_op_density_diff.py  run_phaseB.py  test.py  verify_phaseB.py
ths_zero_phaseB_stubs_v10/: analyze_phaseB_suite.py  run_phaseB.py  viz_ths_dashboards_phaseB.py
(+22 files in other folders)
